--- a/src/main/resources/client/validaator.fxml
+++ b/src/main/resources/client/validaator.fxml
@@ -22,7 +22,7 @@
                   <ComboBox fx:id="stopsComboBox" layoutX="196.0" layoutY="60.0" prefWidth="150.0" />
                   <Label layoutX="196.0" layoutY="38.0" text="Peatus" />
                   <Label layoutX="14.0" layoutY="38.0" text="Kasutaja" />
-                  <Button layoutX="145.0" layoutY="95.0" mnemonicParsing="false" text="Valideeri" />
+                  <Button layoutX="145.0" layoutY="95.0" mnemonicParsing="false" onAction="#validateClicked" text="Valideeri" />
                   <Label layoutX="147.0" layoutY="6.0" text="Validaator" />
                   <TableView fx:id="userHistoryTable" layoutX="13.0" layoutY="136.0" prefHeight="307.0" prefWidth="340.0">
                     <columns>
