--- a/src/main/resources/client/validaator.fxml
+++ b/src/main/resources/client/validaator.fxml
@@ -18,8 +18,8 @@
         <items>
           <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="448.0" prefWidth="451.0">
                <children>
-                  <ComboBox fx:id="usersComboBox" layoutX="14.0" layoutY="60.0" onAction="#loadTransactions" prefWidth="150.0" />
-                  <ComboBox fx:id="stopsComboBox" layoutX="196.0" layoutY="60.0" prefWidth="150.0" />
+                  <ComboBox fx:id="usersComboBox" layoutX="14.0" layoutY="60.0" onAction="#loadTransactions" prefWidth="150.0" promptText="Vali kasutaja" />
+                  <ComboBox fx:id="stopsComboBox" layoutX="196.0" layoutY="60.0" prefWidth="150.0" promptText="Vali peatus" />
                   <Label layoutX="196.0" layoutY="38.0" text="Peatus" />
                   <Label layoutX="14.0" layoutY="38.0" text="Kasutaja" />
                   <Button layoutX="145.0" layoutY="95.0" mnemonicParsing="false" onAction="#validateClicked" text="Valideeri" />
