TableView for User's transaction history is now being populated.
- Give functionality to loadTransactions() method.
  query the API for the current user's transactions and refresh the TableView
- @FXML initialize()
  Assign properties to TableView Columns (ticketNr, stopName, transactionDate)

- Add TODO: comments

--- a/src/main/resources/client/validaator.fxml
+++ b/src/main/resources/client/validaator.fxml
@@ -31,7 +31,7 @@
                       <TableColumn id="tableDateOfPurchase" fx:id="ticketPurchaseDateColumn" minWidth="0.0" prefWidth="121.0" text="Ostukuupäev" />
                     </columns>
                   </TableView>
-                  <Button layoutX="327.0" layoutY="110.0" mnemonicParsing="false" text="↻">
+                  <Button layoutX="327.0" layoutY="110.0" mnemonicParsing="false" onAction="#loadTransactions" text="↻">
                      <font>
                         <Font size="11.0" />
                      </font>
