--- a/src/main/resources/client/validaator.fxml
+++ b/src/main/resources/client/validaator.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/9.0.4" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.ValidatorController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="450.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/8.0.121" xmlns:fx="http://javafx.com/fxml/1" fx:controller="client.ValidatorController">
    <children>
       <SplitPane dividerPositions="0.5" prefHeight="450.0" prefWidth="730.0">
         <items>
@@ -27,8 +27,11 @@
                     <columns>
                       <TableColumn id="tableTicketNr" fx:id="ticketNrColumn" prefWidth="111.0" text="Pileti nr" />
                         <TableColumn id="tableStopName" fx:id="stopNameColumn" prefWidth="115.0" text="Peatus" />
-                      <TableColumn id="tableDateOfPurchase" fx:id="ticketPurchaseDateColumn" minWidth="0.0" prefWidth="121.0" text="Ostukuupäev" />
+                      <TableColumn id="tableDateOfPurchase" fx:id="ticketPurchaseDateColumn" minWidth="0.0" prefWidth="121.0" text="Kuupäev" />
                     </columns>
+                     <columnResizePolicy>
+                        <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+                     </columnResizePolicy>
                   </TableView>
                </children>
             </AnchorPane>
